alignement issues

--- a/src/pages/listofdoctors/listofdoctors.scss
+++ b/src/pages/listofdoctors/listofdoctors.scss
@@ -20,14 +20,14 @@ page-listofdoctors {
           padding: 0px !important;
       }
       .doctor-list-card{
-        height: 300px;
+        height: 250px;
           width: 100% !important;
       }
       .doctor-card-percen{
           margin-top:-10px !important;
       }
       .doctor-list-row{
-        height: 200px;
+        height: 170px;
       }
 
 }
